[package]
name = "moonshot"
version = "0.1.0"
authors = ["Quentin M. Kniep <hello@quentinkniep.com>"]
edition = "2018"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "1e9a0544bdaf2794664b71d3567600e786eefd10" }
bincode = "1"
bytes = "0.6"
serde = { version = "1", features = ["derive"] }
tokio = { version = "0.3", features = ["full"] }
