[package]
name = "moonshot"
version = "0.1.0"
authors = ["Quentin M. Kniep <hello@quentinkniep.com>"]
edition = "2018"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "f69cc6f94c9df675457b56297d582c16b5d37cef" }
bincode = "1"
bytes = "0.6"
serde = { version = "1", features = ["derive"] }
tokio = { version = "0.3", features = ["full"] }
